New added objects will not appear in Local View #62436

Closed
opened 2019-03-11 09:22:18 +01:00 by Christoph Werner · 16 comments

System Information
Operating system: Windows 10 Pro 64
Graphics card: GeForce GTX 1080 Ti

Blender Version
Broken: blender-2.80-6fd11a21f5c5-win64
Worked: 2.79

Short description of error
New added objects will be placed outside of local view, when working in local view mode.
The user is forced to exit the local view, reselect the objects and go back to local view. Really unproductive.
Imagine what this mean if you are working with dozen of models...

Exact steps for others to reproduce the error

  1. Start new scene.
  2. Create any mesh object (cube e.g.)
  3. Select the cube and switch to local mode. (Press / -key on numpad or use menu View->Local View->Toggle Local View.)
  4. Add a another object inside local view.
  • New object is not visible in local view mode but exists in scene.

This issue sounds banal, but it's really ugly if you are modeling with a lot of objects.

In version 2.79 new added objects were always automatically added to local view. This is important and something logic.

Please reactivate this function!

Here is a video on youtube with additional infos:
https://youtu.be/opGClr9dSmY

**System Information** Operating system: Windows 10 Pro 64 Graphics card: GeForce GTX 1080 Ti **Blender Version** Broken: blender-2.80-6fd11a21f5c5-win64 Worked: 2.79 **Short description of error** New added objects will be placed outside of local view, when working in local view mode. The user is forced to exit the local view, reselect the objects and go back to local view. Really unproductive. Imagine what this mean if you are working with dozen of models... **Exact steps for others to reproduce the error** 1. Start new scene. 2. Create any mesh object (cube e.g.) 3. Select the cube and switch to local mode. (Press / -key on numpad or use menu View->Local View->Toggle Local View.) 4. Add a another object inside local view. - > New object is not visible in local view mode but exists in scene. This issue sounds banal, but it's really ugly if you are modeling with a lot of objects. In version 2.79 new added objects were always automatically added to local view. This is important and something logic. Please reactivate this function! **Here is a video on youtube with additional infos:** https://youtu.be/opGClr9dSmY

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner

Added subscriber: @machieb

Added subscriber: @machieb

Can´t confirm. In todays build new created objects are added to local view.

Can´t confirm. In todays build new created objects are added to local view.

Hi. Thank you for the response.I'm using todays build too.

I've prepared a video for this issue in my first post to explain what is actually happen, by showing you some examples.

Basically you are right, but there are some issues with the local view I explain in my video. So currently something is not round and should be definitely fixed.

Thank you
Chris

Hi. Thank you for the response.I'm using todays build too. I've prepared a video for this issue in my first post to explain what is actually happen, by showing you some examples. Basically you are right, but there are some issues with the local view I explain in my video. So currently something is not round and should be definitely fixed. Thank you Chris

I watched your video and tried to reproduce it. I tried to add new objects to local view. It worked except of the torus.
The torus is the only mesh primitve which is not showing up in local view if you add it! This is a bug!

So I can confirm that if you add a torus to local view, its not added like the other primitves!

I watched your video and tried to reproduce it. I tried to add new objects to local view. It worked except of the **torus.** The torus is the only mesh primitve which is not showing up in local view if you add it! This is a bug! **So I can confirm that if you add a torus to local view, its not added like the other primitves!**

Have you tried the Extra Objects AddOn too?
Later in the video I show it with a single vertex object that comes with the extra objects AddOn that is an official build AddOn.

Here is the link to the video position to see it: https://youtu.be/opGClr9dSmY?t=180

Thank you
Chris

Have you tried the Extra Objects AddOn too? Later in the video I show it with a single vertex object that comes with the extra objects AddOn that is an official build AddOn. Here is the link to the video position to see it: https://youtu.be/opGClr9dSmY?t=180 Thank you Chris

No I havn´t tried the extra objects AddOn. But I think you made the bug clear. The developers should have a look on adding objects to local view.
They should make it work, that adding all kind of objects and geometry plus from the extra objects AddOn should work in local view as expected.
I think they will solve the problem soon!

No I havn´t tried the extra objects AddOn. But I think you made the bug clear. The developers should have a look on adding objects to local view. They should make it work, that adding all kind of objects and geometry plus from the extra objects AddOn should work in local view as expected. I think they will solve the problem soon!

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-03-11 14:09:36 +01:00

I can confirm that the torus does not appear in local view when added.

I can confirm that the torus does not appear in local view when added.
Campbell Barton was unassigned by Brecht Van Lommel 2019-03-11 15:01:35 +01:00
Dalai Felinto was assigned by Brecht Van Lommel 2019-03-11 15:01:35 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I also noticed that if you select vertices in local view and add 'Hook to new object' (ctrl+h), the newly added empty will be outside of local view. In 2.79 it was inside of local view. Don't know if it deserves separate bug report.

I also noticed that if you select vertices in local view and add 'Hook to new object' (ctrl+h), the newly added empty will be outside of local view. In 2.79 it was inside of local view. Don't know if it deserves separate bug report.

This issue was referenced by 9054b39b27

This issue was referenced by 9054b39b27c4198f436329f78af43fe3f3175508

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 3ea7a5d869

This issue was referenced by 3ea7a5d8699c74ddf4ea7b359022145e44f62bc2

This issue was referenced by af0ab15e1d

This issue was referenced by af0ab15e1dd84aadb32ee8d7a836a08fe6251474
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62436
No description provided.