Fix T62436: New added Torus won't appear in Local View

I had to add a region3d.local_view_add(ob) for the API.