source/blender/editors/include/ED_screen.h
@@ -41,6 +41,7 @@ struct Main;
 struct MenuType;
 struct PropertyRNA;
 struct Scene;
+struct SpaceLink;
 struct ViewLayer;
 struct WorkSpace;
 struct WorkSpaceInstanceHook;
@@ -195,6 +196,7 @@ void    ED_screens_navigation_bar_tools_menu_create(struct bContext *C, struct u
 bool    ED_screen_stereo3d_required(const struct bScreen *screen, const struct Scene *scene);
 Scene   *ED_screen_scene_find(const struct bScreen *screen, const struct wmWindowManager *wm);
 Scene   *ED_screen_scene_find_with_window(const struct bScreen *screen, const struct wmWindowManager *wm, struct wmWindow **r_window);
+ScrArea *ED_screen_area_find_with_spacedata(const bScreen *screen, const struct SpaceLink *sl, bool only_visible);
 struct wmWindow *ED_screen_window_find(const struct bScreen *screen, const struct wmWindowManager *wm);
 void    ED_screen_preview_render(const struct bScreen *screen, int size_x, int size_y, unsigned int *r_rect) ATTR_NONNULL();
 
